# SmartBidPro

./: DESIGN.md  README.md  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/admin/create-tender/: page.tsx
app/admin/dashboard/: page.tsx
app/admin/edit-tender/[id]/: page.tsx
app/dashboard/: page.tsx
app/login/: page.tsx
backend/: Cargo.toml
backend/src/: auth.rs  db.rs  errors.rs  main.rs  models.rs  state.rs
backend/src/blockchain/: mod.rs
backend/src/routes/: auctions.rs  auth.rs  bids.rs  mod.rs
components/: AIComplianceAnalysis.tsx
components/ui/: badge.tsx  dialog.tsx
contracts/src/: TenderNotary.sol
lib/: mockData.ts
scripts/: create-test-user.js
