[package]
name = "smartbidpro-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
mongodb = "3.1.0"
alloy = { version = "2.0.0", features = ["full", "signer-keystore"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "9.2"
bcrypt = "0.16"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
futures = "0.3.30"
thiserror = "1.0"
env_logger = "0.10"
sha2 = "0.10"
